fix fonts and gap

--- a/src/pages/maintenance/styles.module.scss
+++ b/src/pages/maintenance/styles.module.scss
@@ -9,6 +9,7 @@
   justify-content: flex-end;
   padding: 55px 60px 7.5rem;
   overflow: hidden;
+  font-family: "ALT Riviera";
 
   @media screen and (max-width: 768px) {
     align-items: center;
@@ -31,6 +32,10 @@
     flex-direction: column;
     gap: 1.5rem;
     z-index: 1;
+    width: 100%;
+    max-width: 1392px;
+    align-self: center;
+    align-items: end;
 
     @media screen and (max-width: 768px) {
       gap: 1.375rem;
@@ -42,12 +47,12 @@
     height: 99px;
     mix-blend-mode: screen;
     position: relative;
-    left: -2rem;
+    right: -2rem;
 
     @media screen and (max-width: 768px) {
       width: 332px;
       height: 57.361px;
-      left: -1rem;
+      right: -1rem;
     }
   }
 
