--- a/src/shared/ui/button/styles.module.scss
+++ b/src/shared/ui/button/styles.module.scss
@@ -22,6 +22,7 @@
   position: relative;
   display: inline-block;
   width: 100%;
+  top: 2px;
 }
 
 .buttonText,
