--- a/src/widgets/header/styles.module.scss
+++ b/src/widgets/header/styles.module.scss
@@ -62,6 +62,7 @@
 
   .bordered {
     font-size: 24px;
+    line-height: 123%;
 
     @media (max-width: 768px) {
       display: none;
