--- a/src/widgets/home/form/styles.module.scss
+++ b/src/widgets/home/form/styles.module.scss
@@ -30,6 +30,7 @@
       width: 100%;
       min-height: 330px;
       padding: 25px 1.5rem;
+      justify-content: flex-start;
     }
 
     .content {
@@ -46,6 +47,7 @@
 
       h2 {
         font-size: 4.375rem;
+        line-height: 100%;
 
         @media (max-width: 1024px) {
           font-size: 2.25rem;
@@ -55,6 +57,7 @@
       p {
         max-width: 27rem;
         line-height: 130%;
+        letter-spacing: -0.084px;
 
         @media (max-width: 1024px) {
           font-size: 1rem;
@@ -69,11 +72,12 @@
     justify-content: space-between;
     width: 50%;
     padding: 6.25rem 58px 2.625rem;
+    gap: 12.5rem;
 
     @media (max-width: 1024px) {
       width: 100%;
       padding: 27px 30px 46px;
-      gap: 5rem;
+      gap: 102px;
     }
 
     form {
@@ -85,9 +89,11 @@
         background: transparent;
         border: none;
         font-size: 4rem;
-        line-height: 123%;
         color: white;
         position: relative;
+        caret-color: #fea372;
+        letter-spacing: -0.768px;
+        font-weight: 300;
 
         &::placeholder {
           color: #7a7a7a;
